# tmflow

./: Cargo.toml  README.md
benches/: walltime.rs
docs/: 01_intro.md  02_theory.md  03_architecture.md  04_tutorial.md  05_faq.md
examples/: validate.rs  vanderpol.rs
scripts/: plot.py
src/: docs.rs  driver.rs  integrator.rs  interval.rs  jet.rs  lib.rs  scalar.rs  system.rs  taylor_model.rs
src/integrators/: mod.rs  rk4.rs  taylor.rs
src/systems/: mod.rs  vanderpol.rs
tests/: containment.rs  soundness.rs
